--- a/styles.css
+++ b/styles.css
@@ -48,19 +48,16 @@ button:hover {
 }
 
 #result {
-    margin-top: 20px;
-}
-
-.columns {
     display: flex;
     justify-content: space-around;
+    margin-top: 20px;
 }
 
 .column {
     width: 45%;
 }
 
-.column h3 {
+.column h2 {
     margin-bottom: 10px;
 }
 
@@ -74,4 +71,22 @@ button:hover {
     padding: 8px;
     margin: 5px 0;
     border-radius: 4px;
+    position: relative;
+}
+
+.column li::before {
+    content: attr(data-symbol);
+    position: absolute;
+    left: -25px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #ccc;
+    border-radius: 50%;
+    padding: 5px;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
 }
