--- a/styles.css
+++ b/styles.css
@@ -75,14 +75,12 @@ button:hover {
     margin: 5px 0;
     border-radius: 4px;
     position: relative;
+    display: flex;
+    justify-content: space-between;
 }
 
-.column li::before {
+.column li::after {
     content: attr(data-symbol);
-    position: absolute;
-    left: -25px;
-    top: 50%;
-    transform: translateY(-50%);
     background-color: #ccc;
     border-radius: 50%;
     padding: 5px;
@@ -92,4 +90,5 @@ button:hover {
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    margin-left: 10px;
 }
