--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ button:hover {
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center; /* Centrando verticalmente */
 }
 
 .column li::after {
